oop_mro/tests/trybuild/fail_ambiguous_base_cast.stderr
warning: use of deprecated constant `_::__OOP_MRO_WARNING`: ambiguous base `Root` in class `Diamond`: normal `as_root` accessors are omitted; use type-directed via accessors such as `as_base_via::<Left, Root>()`, `as_base_via::<Right, Root>()`
 --> tests/trybuild/fail_ambiguous_base_cast.rs:3:1
  |
3 | / oop_class! {
4 | |     class Root {}
5 | |     class Left: Root {}
6 | |     class Right: Root {}
7 | |     class Diamond: Left, Right {}
8 | | }
  | |_^
  |
  = note: `#[warn(deprecated)]` on by default
  = note: this warning originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `as_root` found for struct `Diamond` in the current scope
  --> tests/trybuild/fail_ambiguous_base_cast.rs:12:21
   |
 3 | / oop_class! {
 4 | |     class Root {}
 5 | |     class Left: Root {}
 6 | |     class Right: Root {}
 7 | |     class Diamond: Left, Right {}
   | |_________________- method `as_root` not found for this struct
...
12 |       let _ = diamond.as_root();
   |                       ^^^^^^^ method not found in `Diamond`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `AsRoot` defines an item `as_root`, perhaps you need to implement it
  --> tests/trybuild/fail_ambiguous_base_cast.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Root {}
 5 | |     class Left: Root {}
 6 | |     class Right: Root {}
 7 | |     class Diamond: Left, Right {}
 8 | | }
   | |_^
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
help: some of the expressions' fields have a method of the same name
   |
12 |     let _ = diamond.__oop_base_left.as_root();
   |                     ++++++++++++++++
12 |     let _ = diamond.__oop_base_right.as_root();
   |                     +++++++++++++++++
